# VNRchat

./: .gitignore  app.py  pyproject.toml
data/: Cơ đồ, tiềm lực, vị thế và uy tín quốc tế của Việt Nam sau 50 năm đất nước thống nhất vững bước vào kỷ nguyên mới.docx
