[project]
name = "vnrchat"
version = "0.1.0"
description = "Streamlit chat app for querying local Vietnamese history documents with inline references."
authors = [{ name = "VNRchat User" }]
requires-python = ">=3.9"
dependencies = [
    "streamlit==1.39.0",
    "scikit-learn==1.5.2",
    "PyPDF2==3.0.1",
    "docx2txt==0.8",
    "langchain==0.2.12",
    "langchain-community==0.2.11",
    "langchain-google-genai==1.0.7",
    "google-generativeai==0.7.2",
    "python-dotenv==1.0.1",
]

[tool.hatch.build.targets.wheel]
only-include = ["app.py"]
py-modules = ["app"]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.uv]
package = true
